debian12 github ci runner: JDK_JAVA_OPTIONS with add-opens